--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "first-project",
+  "name": "firstproject",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./main.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-style/react": "^1.0.30",
+    "@gluestack-ui/config": "^1.0.10",
+    "@gluestack-ui/themed": "^1.0.33",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.3",
+    "axios-auth-refresh": "^3.3.6",
     "expo": "~49.0.15",
+    "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-keychain": "^8.1.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^13.4.0",
+    "react-native-system-bars": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
